2010-01-10  Adam Piatyszek  <ediap@users.sourceforge.net>

	* win32/itpp_acml.vcproj, win32/itpp_mkl.vcproj: Update MSVC++
	project files to include recently added source files

	* configure.ac.in, itpp/Makefile.am, itpp/base/binfile.h,
	itpp/base/itcompat.h, itpp/base/itfile.h, itpp/base/ittypes.h,
	itpp/base/math/elem_math.cpp, itpp/base/math/elem_math.h,
	itpp/base/math/error.cpp, itpp/base/math/error.h,
	itpp/base/math/log_exp.cpp, itpp/base/math/log_exp.h,
	itpp/base/math/sources.mk, itpp/base/math/trig_hyp.cpp,
	itpp/base/math/trig_hyp.h, itpp/base/sources.mk,
	itpp/base/specmat.cpp, itpp/comm/galois.cpp,
	itpp/comm/modulator_nd.cpp, itpp/fixed/fix_base.h, itpp/itbase.h,
	itpp/signal/sigfun.cpp: Make itcompat.h a private (non-installable)
	header file. For the purpose of non-standard integer type
	definitions, a new header file ittypes.h is introduced. A few
	inlined functions from the math submodule are moved to newly
	created source files.

	* itpp/base/converters.cpp, itpp/base/converters.h: Remove
	workaround for GCC 3.3 error for a few template instantiations

	* configure.ac.in, itpp/base/converters.h,
	itpp/base/help_functions.h, itpp/base/mat.h, itpp/base/matfunc.h,
	itpp/base/smat.h, itpp/base/svec.h, itpp/base/vec.h,
	itpp/comm/interleave.h, itpp/comm/pulse_shape.h,
	itpp/fixed/cfixed.h, itpp/fixed/fixed.h, itpp/signal/filter.h,
	itpp/signal/transforms.h, m4/ac_cxx_extern_template.m4: Do not
	check for "extern template" in configure script. Instead, switch
	this C++ extension for MSVC++ compiler only.

	* itpp/base/converters.cpp, itpp/base/converters.h: Make
	converters.h public header file independent of itcompat.h

	* itpp/base/Makefile.am, itpp/base/sources.mk: Do not install
	blas.h header file

	* itpp/base/mat.cpp, itpp/base/mat.h: Move configure dependent
	implementations to mat.cpp file

	* itpp/base/copy_vector.cpp, itpp/base/copy_vector.h,
	itpp/base/sources.mk, itpp/base/vec.cpp: Move configure dependent